@@ -545,9 +545,10 @@ class OvmsWebServer : public ExternalRamAllocated
     static void HandleCfgModem(PageEntry_t& p, PageContext_t& c);
     static void HandleCfgServerV2(PageEntry_t& p, PageContext_t& c);
     static void HandleCfgServerV3(PageEntry_t& p, PageContext_t& c);
+    static void HandleCfgNotifications(PageEntry_t& p, PageContext_t& c);
     static void HandleCfgWebServer(PageEntry_t& p, PageContext_t& c);
 #ifdef CONFIG_OVMS_COMP_PUSHOVER
-    static void HandleCfgNotification(PageEntry_t& p, PageContext_t& c);
+    static void HandleCfgPushover(PageEntry_t& p, PageContext_t& c);
 #endif
     static void HandleCfgWifi(PageEntry_t& p, PageContext_t& c);
     static void OutputWifiTable(PageEntry_t& p, PageContext_t& c, const std::string prefix, const std::string paramname,
