@@ -876,10 +876,10 @@ void OvmsWebServer::HandleCfgModem(PageEntry_t& p, PageContext_t& c)
 
 
 /**
- * HandleCfgNotification: Configure notifications (URL /cfg/notifications)
+ * HandleCfgPushover: Configure pushover notifications (URL /cfg/pushover)
  */
 #ifdef CONFIG_OVMS_COMP_PUSHOVER
-void OvmsWebServer::HandleCfgNotification(PageEntry_t& p, PageContext_t& c)
+void OvmsWebServer::HandleCfgPushover(PageEntry_t& p, PageContext_t& c)
 {
   std::string error;
   OvmsConfigParam* param = MyConfig.CachedParam("pushover");
@@ -1578,6 +1578,116 @@ void OvmsWebServer::HandleCfgServerV3(PageEntry_t& p, PageContext_t& c)
 }
 #endif
 #endif
+
+
+/**
+ * HandleCfgNotifications: configure notifications (URL /cfg/notifications)
+ */
+void OvmsWebServer::HandleCfgNotifications(PageEntry_t& p, PageContext_t& c)
+{
+  std::string error;
+  std::string log_trip_storetime, log_trip_minlength, log_grid_storetime;
+
+  if (c.method == "POST") {
+    // process form submission:
+    log_trip_storetime = c.getvar("log_trip_storetime");
+    log_trip_minlength = c.getvar("log_trip_minlength");
+    log_grid_storetime = c.getvar("log_grid_storetime");
+
+    if (log_trip_storetime != "") {
+      if (atoi(log_trip_storetime.c_str()) < 0 || atoi(log_trip_storetime.c_str()) > 365) {
+        error += "<li data-input=\"log_trip_storetime\">Trip history log storage time must be in the range 0…365 days</li>";
+      }
+    }
+    if (log_trip_minlength != "") {
+      if (atoi(log_trip_minlength.c_str()) < 0) {
+        error += "<li data-input=\"log_trip_minlength\">Trip min length must not be negative</li>";
+      }
+    }
+    if (log_grid_storetime != "") {
+      if (atoi(log_grid_storetime.c_str()) < 0 || atoi(log_grid_storetime.c_str()) > 365) {
+        error += "<li data-input=\"log_grid_storetime\">Grid history log storage time must be in the range 0…365 days</li>";
+      }
+    }
+
+    if (error == "") {
+      // success:
+      if (log_trip_storetime == "")
+        MyConfig.DeleteInstance("notify", "log.trip.storetime");
+      else
+        MyConfig.SetParamValue("notify", "log.trip.storetime", log_trip_storetime);
+      if (log_trip_minlength == "")
+        MyConfig.DeleteInstance("notify", "log.trip.minlength");
+      else
+        MyConfig.SetParamValue("notify", "log.trip.minlength", log_trip_minlength);
+      if (log_grid_storetime == "")
+        MyConfig.DeleteInstance("notify", "log.grid.storetime");
+      else
+        MyConfig.SetParamValue("notify", "log.grid.storetime", log_grid_storetime);
+
+      c.head(200);
+      c.alert("success", "<p class=\"lead\">Notifications configured.</p>");
+      OutputHome(p, c);
+      c.done();
+      return;
+    }
+
+    // output error, return to form:
+    error = "<p class=\"lead\">Error!</p><ul class=\"errorlist\">" + error + "</ul>";
+    c.head(400);
+    c.alert("danger", error.c_str());
+  }
+  else {
+    // read configuration:
+    log_trip_storetime = MyConfig.GetParamValue("notify", "log.trip.storetime");
+    log_trip_minlength = MyConfig.GetParamValue("notify", "log.trip.minlength");
+    log_grid_storetime = MyConfig.GetParamValue("notify", "log.grid.storetime");
+
+    // generate form:
+    c.head(200);
+  }
+
+  c.panel_start("primary", "Notifications configuration");
+  c.form_start(p.uri);
+
+  c.fieldset_start("Data Log Storage Times");
+
+  c.input("number", "Trip history log", "log_trip_storetime", log_trip_storetime.c_str(), "Default: empty/0 = disabled",
+    "<p>Empty/0 = disabled. If enabled, the trip log receives one entry per trip, "
+    "see <a target=\"_blank\" href=\""
+    "https://docs.openvehicles.com/en/latest/userguide/notifications.html#trip-history-log"
+    "\">user manual</a> for details.</p>",
+    "min=\"0\" max=\"365\" step=\"1\"", "days");
+  c.input("number", "Trip min length", "log_trip_minlength", log_trip_minlength.c_str(), "Default: 0.2 km",
+    "<p>Only trips over at least this distance will be logged.</p>",
+    "min=\"0\" step=\"0.1\"", "km");
+
+  c.input("number", "Grid history log", "log_grid_storetime", log_grid_storetime.c_str(), "Default: empty/0 = disabled",
+    "<p>Empty/0 = disabled. If enabled, the grid log receives one entry per charge/generator state change, "
+    "see <a target=\"_blank\" href=\""
+    "https://docs.openvehicles.com/en/latest/userguide/notifications.html#grid-history-log"
+    "\">user manual</a> for details.</p>",
+    "min=\"0\" max=\"365\" step=\"1\"", "days");
+
+  c.fieldset_end();
+
+  c.hr();
+  c.input_button("default", "Save");
+  c.form_end();
+  c.panel_end(
+    "<p>Data logs are sent to the server (V2/V3). A V2 server may store the logs as requested by you "
+    "for up to 365 days, depending on the server configuration. You can download the log tables "
+    "in CSV format from the server using the standard server APIs or the browser UI provided "
+    "by the server.</p>"
+    "<p>An MQTT (V3) server normally won't store data records for longer than a few days, possibly "
+    "hours. You need to fetch them as soon as possible. There are automated MQTT tools available "
+    "for this purpose.</p>"
+    "<p>See <a target=\"_blank\" href=\""
+    "https://docs.openvehicles.com/en/latest/userguide/notifications.html"
+    "\">user manual</a> for details on notifications.</p>"
+    );
+  c.done();
+}
 
 
 /**
